# driveAZ_Analytics

./: .gitignore  README.md  requirements.txt
BSM_analysis/: BSM_Parquet.ipynb  README.md  (+3 more)
libsm/b2v-libsm/: .clang-format  .gitignore  .versionrc  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
libsm/b2v-libsm/.github/: CODEOWNERS  pull_request_template.md
libsm/b2v-libsm/.github/workflows/: automerge.yml  prLintRunner.yml
libsm/b2v-libsm/examples/: .gitignore  CMakeLists.txt  bsmPartII.c  createPSM.c  createSPAT.c  createTIM.c  decodeToJER.c  validator.c
libsm/b2v-libsm/src/: CMakeLists.txt  j2735-defines.h  j2945-defines.h  libsm-SPAT.c  libsm-SPAT.h  libsm-TIM.c  libsm-TIM.h  libsm-error.c  libsm-error.h  libsm-pathHistory.c  libsm-pathHistory.h  libsm-per.c  libsm-per.h  libsm.c  libsm.h  octet-helpers.c  octet-helpers.h  pathPrediction.c  pathPrediction.h  version.h
libsm/b2v-libsm/src/j2540/: AccidentsAndIncidents.c  AccidentsAndIncidents.h  AdviceInstructionsMandatory.c  AdviceInstructionsMandatory.h  AdviceInstructionsRecommendations.c  AdviceInstructionsRecommendations.h  AlternateRoute.c  AlternateRoute.h  AssetStatus.c  AssetStatus.h  BIT_STRING_jer.c  CMakeLists.files.txt  CMakeLists.txt  Closures.c  Closures.h  DelayStatusCancellation.c  DelayStatusCancellation.h  DeviceStatus.c  DeviceStatus.h  Disasters.c  Disasters.h  Disturbances.c  Disturbances.h  EXTERNAL.c  EXTERNAL.h  GenericLocations.c  GenericLocations.h  INTEGER.c  INTEGER_print.c  ITISEventType.c  ITISEventType.h  ITIScodes.c  ITIScodes.h  ITIScodesAndText.c  ITIScodesAndText.h  ITISgroups.c  ITISgroups.h  ITIStext.c  ITIStext.h  IncidentResponseEquipment.c  (+89 more)
libsm/b2v-libsm/src/j2735/: AccelSteerYawRateConfidence.c  AccelSteerYawRateConfidence.h  Acceleration.c  Acceleration.h  AccelerationConfidence.c  AccelerationConfidence.h  AccelerationSet4Way.c  AccelerationSet4Way.h  AddGrpB_Angle.c  AddGrpB_Angle.h  AddGrpB_Elevation.c  AddGrpB_Elevation.h  AddGrpB_MsgCount.c  AddGrpB_MsgCount.h  AddGrpB_TimeMark.c  AddGrpB_TimeMark.h  AdvisorySpeed.c  AdvisorySpeed.h  AdvisorySpeedList.c  AdvisorySpeedList.h  AdvisorySpeedType.c  AdvisorySpeedType.h  AllowedManeuvers.c  AllowedManeuvers.h  Altitude.c  Altitude.h  AltitudeConfidence.c  AltitudeConfidence.h  AltitudeValue.c  AltitudeValue.h  AmbientAirPressure.c  AmbientAirPressure.h  AmbientAirTemperature.c  AmbientAirTemperature.h  AnimalPropelledType.c  AnimalPropelledType.h  AnimalType.c  AnimalType.h  AntennaOffsetSet.c  AntennaOffsetSet.h  (+940 more)
libsm/b2v-libsm/test/: CMakeLists.txt  bitstring.c  pathPrediction_tests.c  per.c  rangeCoercion.c  smoketest.c  testPathHistory.c  testRunner.cpp  testSPAT.c  testTIM.c  versionCheck.c
libsm/b2v-libsm/tooling/: Jenkinsfile  asn1c.sh  clang-format  colours.cmake  gen-j2540.sh  gen-j2735.sh  lint.sh  lintExcludes  misc.cmake  typos.toml  version-updater.js
libsm/b2v-libsm/tooling/hooks/: README  pre-commit
libsm/b2v-libsm/tooling/version/: GitVersion.cmake  git-version.c.in  git-version.h.in
(+14 files in other folders)
